# pointcloud-webtools

./: .editorconfig  .gitignore  .prettierignore  DEPLOYMENT.md  LAZ_LOADER_README.md  LICENSE  README.md  build.sh  ecosystem.config.cjs  package.json  vite.config.ts
backend/: README.md  eslint.config.js  (+3 more)
backend/src/services/tools/: Cargo.toml  README.md  VoxelDownsampler.js  point_smooth  point_smooth.cpp  point_smooth_build.test.js  point_smooth_cpp  point_smooth_cpp.cpp  point_smooth_rust  point_smooth_rust.rs  point_smooth_simple  voxel_debug  voxel_debug.cpp  voxel_debug_build.test.js  voxel_debug_rust.rs  voxel_downsample  voxel_downsample.cpp  voxel_downsample_build.test.js  voxel_downsample_python.py  voxel_downsample_rust.rs
backend/src/services/tools/point_smooth/: build_cpp.sh  build_cython.sh  point_smooth.cpp  point_smooth_cpp  point_smooth_cpp.cpp  point_smooth_cython.c  point_smooth_cython.pyx  point_smooth_cython_wrapper.py  point_smooth_json  point_smooth_python.py  point_smooth_rust  point_smooth_rust.rs  setup_cython.py
backend/src/services/tools/release/: point_smooth_rust.d  voxel_debug_rust.d  voxel_downsample_rust.d
backend/src/services/tools/rust/: Cargo.toml
backend/src/services/tools/voxel_debug/: build_cpp.sh  build_cython.sh  setup_cython.py  voxel_debug  voxel_debug.cpp  voxel_debug_cython.c  voxel_debug_cython.py
backend/src/services/tools/voxel_downsample/: build_cpp.sh  build_cython.sh  test_input.json  test_parse2.cpp  voxel_downsample  voxel_downsample.cpp  voxel_downsample.s  voxel_downsample_cython.c  voxel_downsample_cython.py  voxel_downsample_cython_wrapper.py  voxel_downsample_python.py  voxel_downsample_rust  voxel_downsample_rust.rs
frontend/src/wasm/rust/: Cargo.toml
frontend/src/wasm/rust/src/: common.rs  lib.rs  point_cloud_smoothing.rs  voxel_debug.rs  voxel_downsample.rs
frontend/wasm/rust/: Cargo.toml
frontend/wasm/rust/src/: lib.rs
(+247 files in other folders)
