[package]
name = "pointcloud-tools-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voxel_downsample_rust"
path = "voxel_downsample/voxel_downsample_rust.rs"

[[bin]]
name = "point_smooth_rust"
path = "point_smooth/point_smooth_rust.rs"

[[bin]]
name = "voxel_debug_rust"
path = "voxel_debug/voxel_debug_rust.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "1.1"

[profile.release]
opt-level = 3          # Maximum optimization (same as -O3)
lto = "fat"            # Link Time Optimization (matches C++ -flto)
codegen-units = 1      # Better optimization (single codegen unit)
strip = true           # Strip symbols for smaller binary


